force-app/main/default/objects/Plant__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <description>Full name of the plant for using in official documents.</description>
    <inlineHelpText>Full name of the plant for using in official documents.</inlineHelpText>
    <label>Full Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>