force-app/main/default/objects/Plant__c/fields/FullName_Rus__c.field-meta.xml
<CustomField>
    <fullName>FullName_Rus__c</fullName>
    <description>Full name of the plant in Russian for using in official documents.</description>
    <inlineHelpText>Full name of the plant in Russian for using in official documents.</inlineHelpText>
    <label>Full Name (Rus)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>