force-app/main/default/objects/Plant__c/fields/FullName_Ukr__c.field-meta.xml
<CustomField>
    <fullName>FullName_Ukr__c</fullName>
    <description>Full name of the plant in Ukrainian for using in official documents.</description>
    <inlineHelpText>Full name of the plant in Ukrainian for using in official documents.</inlineHelpText>
    <label>Full Name (Ukr)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>