force-app/main/default/objects/Plant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FullName__c</columns>
    <columns>FullName_Ukr__c</columns>
    <columns>FullName_Rus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>